tests/js/tmodify_cstring.nim
discard """
  errormsg: "cstring doesn't support `[]=` operator"
"""

var x = cstring"abcd"
x[0] = 'x'
